--- a/css/index.css
+++ b/css/index.css
@@ -1,79 +1,121 @@
 .version.index /* version checker */
 {
-	color: #000015;
-	background-color: #B8D8A5;
+	color: #0000E0;
+	background-color: #8B9D45;
 }
 
 #page
 {
-	z-index: 1;
-	background-color: transparent;
-	border-width: 0px;
 	border-color: #000000;
-	width: 100%;
-	margin-right: auto;
+	border-width: 0px;
 	background-image: none;
+	margin-right: auto;
+	width: 100%;
+	background-color: transparent;
 	margin-left: auto;
+	z-index: 1;
 }
 
 #u124
 {
-	z-index: 4;
+	width: 100%;
 	background-color: transparent;
 	position: relative;
+	z-index: 4;
+}
+
+#u151
+{
+	filter: alpha(opacity=30);
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+	background-color: transparent;
+	opacity: 0.3;
+	position: relative;
+	z-index: 8;
+}
+
+#u104
+{
+	left: -50%;
+	width: 100%;
+	background-color: transparent;
+	position: relative;
+}
+
+#u104-wrapper
+{
+	left: 50%;
+	bottom: 62px;
+	position: fixed;
+	z-index: 2;
+}
+
+#u161
+{
+	filter: alpha(opacity=80);
+	margin-right: -10000px;
+	background-color: transparent;
+	opacity: 0.8;
+	position: relative;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+	z-index: 12;
+}
+
+#u161:hover
+{
+	margin-right: -10000px;
+	margin-bottom: 0px;
+	margin-left: 0%;
+	opacity: 1;
+	filter: alpha(opacity=100);
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+	min-height: 0px;
+}
+
+#u161:active
+{
+	margin-right: -10000px;
+	margin-bottom: 0px;
+	margin-left: 0%;
+	opacity: 0.8;
+	filter: alpha(opacity=80);
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+	min-height: 0px;
+}
+
+#pu124,#pu171
+{
 	margin-right: -10000px;
 }
 
 #u171
 {
+	width: 100%;
+	background-color: transparent;
+	position: relative;
 	z-index: 6;
-	background-color: transparent;
-	margin-right: -10000px;
-	position: relative;
-}
-
-#u151
-{
-	z-index: 8;
-	background-color: transparent;
-	opacity: 0.3;
-	filter: alpha(opacity=30);
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u161
-{
-	z-index: 12;
-	background-color: transparent;
-	opacity: 0.8;
-	filter: alpha(opacity=80);
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-	position: relative;
-	margin-right: -10000px;
 }
 
 #u185
 {
-	z-index: 10;
-	background-color: transparent;
 	opacity: 0.3;
 	filter: alpha(opacity=30);
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
+	z-index: 10;
 }
 
 #u178
 {
-	z-index: 14;
-	background-color: transparent;
 	opacity: 0.8;
 	filter: alpha(opacity=80);
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
+	z-index: 14;
 }
 
 #pu360
@@ -83,16 +125,16 @@
 
 #u360
 {
-	z-index: 18;
-	background-color: transparent;
 	opacity: 0.8;
 	filter: alpha(opacity=80);
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
+	z-index: 18;
 }
 
-#u161:hover,#u178:hover,#u360:hover
+#u178:hover,#u360:hover
 {
 	opacity: 1;
 	filter: alpha(opacity=100);
@@ -101,7 +143,7 @@
 	margin: 0px -10000px 0px 0%;
 }
 
-#u161:active,#u178:active,#u360:active
+#u178:active,#u360:active
 {
 	opacity: 0.8;
 	filter: alpha(opacity=80);
@@ -112,14 +154,14 @@
 
 #u346
 {
-	z-index: 16;
-	background-color: transparent;
 	opacity: 0.8;
 	filter: alpha(opacity=80);
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-	margin-top: 2px;
+	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
+	z-index: 16;
+	margin-top: 2px;
 }
 
 #u346:hover
@@ -142,42 +184,37 @@
 
 #u620
 {
-	z-index: 20;
-	background-color: transparent;
-	opacity: 0.8;
 	filter: alpha(opacity=80);
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+	background-color: transparent;
+	opacity: 0.8;
 	position: relative;
+	z-index: 20;
 }
 
 #u620:hover
 {
+	margin-right: 0px;
+	margin-bottom: 0px;
+	margin-left: 0%;
 	opacity: 1;
 	filter: alpha(opacity=100);
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-	margin-bottom: 0px;
 	min-height: 0px;
-	margin-right: 0px;
 }
 
 #u620:active
 {
+	margin-right: 0px;
+	margin-bottom: 0px;
+	margin-left: 0%;
 	opacity: 0.8;
 	filter: alpha(opacity=80);
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-	margin-bottom: 0px;
 	min-height: 0px;
-	margin-right: 0px;
 }
 
-#u104
-{
-	z-index: 2;
-	background-color: transparent;
-	position: relative;
-}
-
-#u124_img,#u171_img,#u151_img,#u161_img,#u185_img,#u178_img,#u360_img,#u346_img,#u620_img,#u104_img
+#u124_img,#u151_img,#u104_img,#u161_img,#u171_img,#pu185,#u185_img,#u178_img,#u360_img,#u346_img,#u620_img
 {
 	width: 100%;
 }
@@ -208,80 +245,93 @@ body
 
 	#page
 	{
-		min-height: 346px;
-		padding-top: 92px;
-		padding-bottom: 62px;
+		min-height: 328px;
+		padding-bottom: 172px;
 		max-width: 960px;
 	}
 
 	#pu124
 	{
-		width: 23.96%;
-		margin-left: 38.03%;
-	}
-
-	#u124
-	{
-		width: 39.14%;
-	}
-
-	#u171
-	{
-		width: 39.14%;
-		left: 60.87%;
-	}
-
-	#pu151
-	{
-		margin-top: 19px;
-		width: 23.96%;
+		margin-top: 92px;
+		width: 9.38%;
 		margin-left: 38.03%;
 	}
 
 	#u151
 	{
-		margin-top: 3px;
-		width: 15.66%;
+		margin-top: 22px;
+		width: 40%;
+	}
+
+	#u104
+	{
+		margin-left: 117px;
+		max-width: 234px;
+	}
+
+	#u104-wrapper
+	{
+		margin-left: -117px;
+		width: 24.38%;
+		max-width: 234px;
 	}
 
 	#u161
 	{
-		width: 16.96%;
-		left: 22.18%;
+		margin-top: 201px;
+		width: 4.07%;
+		left: 43.34%;
 	}
 
 	#u161:hover
 	{
-		width: 16.96%;
+		margin-top: 201px;
+		width: 4.07%;
+	}
+
+	#u161:active
+	{
+		margin-top: 201px;
+		width: 4.07%;
+	}
+
+	#pu171
+	{
+		margin-top: 92px;
+		width: 9.38%;
+		margin-left: 52.61%;
+	}
+
+	#pu185
+	{
+		margin-top: 19px;
 	}
 
 	#u185
 	{
 		margin-top: 3px;
-		width: 15.66%;
-		left: 60.87%;
+		width: 40%;
 	}
 
 	#u178
 	{
-		width: 16.96%;
-		left: 83.05%;
+		width: 43.34%;
+		left: 56.67%;
 	}
 
-	#u161:active,#u178:hover
+	#u178:hover
 	{
-		width: 16.96%;
+		width: 43.34%;
 	}
 
 	#u178:active
 	{
-		width: 16.96%;
+		width: 43.34%;
 	}
 
 	#pu360
 	{
-		width: 8.86%;
-		margin-left: 52.61%;
+		width: 94.45%;
 	}
 
 	#u360
@@ -318,29 +368,19 @@ body
 	#u620
 	{
 		margin-top: 8px;
-		width: 3.75%;
-		margin-left: 52.61%;
+		width: 40%;
 	}
 
 	#u620:hover
 	{
 		margin-top: 8px;
-		width: 3.75%;
-		margin-left: 52.61%;
+		width: 40%;
 	}
 
 	#u620:active
 	{
 		margin-top: 8px;
-		width: 3.75%;
-		margin-left: 52.61%;
-	}
-
-	#u104
-	{
-		margin-top: 312px;
-		width: 24.38%;
-		margin-left: 37.82%;
+		width: 40%;
 	}
 
 	.html
@@ -349,6 +389,7 @@ body
 		background: -webkit-linear-gradient(top,#7C44FF ,#6039D9 100%);
 		background: linear-gradient(to bottom,#7C44FF ,#6039D9 100%);
 	}
+
 }
 
 @media (min-width: 321px) and (max-width: 640px)
@@ -365,80 +406,95 @@ body
 
 	#page
 	{
-		min-height: 375.83040673875746px;
-		padding-top: 62px;
-		padding-bottom: 62.16959326124254px;
+		min-height: 317px;
+		padding-bottom: 183px;
 		max-width: 640px;
 	}
 
 	#pu124
 	{
-		width: 37.5%;
-		margin-left: 31.25%;
-	}
-
-	#u124
-	{
-		width: 39.17%;
-	}
-
-	#u171
-	{
-		width: 39.17%;
-		left: 60.84%;
-	}
-
-	#pu151
-	{
-		margin-top: 30px;
-		width: 37.5%;
+		margin-top: 62px;
+		width: 14.69%;
 		margin-left: 31.25%;
 	}
 
 	#u151
 	{
-		margin-top: 4px;
-		width: 15.84%;
+		margin-top: 34px;
+		width: 40.43%;
+	}
+
+	#u104
+	{
+		margin-left: 107.2537313432836px;
+		max-width: 215px;
+	}
+
+	#u104-wrapper
+	{
+		margin-left: -107px;
+		width: 33.6%;
+		max-width: 215px;
 	}
 
 	#u161
 	{
-		width: 17.09%;
-		left: 22.09%;
+		margin-top: 186px;
+		width: 6.41%;
+		left: 39.54%;
 	}
 
 	#u161:hover
 	{
-		width: 17.09%;
+		margin-top: 186px;
+		width: 6.41%;
+	}
+
+	#u161:active
+	{
+		margin-top: 186px;
+		width: 6.41%;
+	}
+
+	#pu171
+	{
+		padding-bottom: 0px;
+		margin-top: 62px;
+		width: 14.69%;
+		margin-left: 54.07%;
+	}
+
+	#pu185
+	{
+		margin-top: 30px;
 	}
 
 	#u185
 	{
 		margin-top: 4px;
-		width: 15.84%;
-		left: 60.84%;
+		width: 40.43%;
 	}
 
 	#u178
 	{
-		width: 17.09%;
-		left: 82.92%;
+		width: 43.62%;
+		left: 56.39%;
 	}
 
-	#u161:active,#u178:hover
+	#u178:hover
 	{
-		width: 17.09%;
+		width: 43.62%;
 	}
 
 	#u178:active
 	{
-		width: 17.09%;
+		width: 43.62%;
 	}
 
 	#pu360
 	{
-		width: 14.07%;
-		margin-left: 54.22%;
+		width: 95.75%;
+		margin-left: 1.07%;
 	}
 
 	#u360
@@ -475,29 +531,19 @@ body
 	#u620
 	{
 		margin-top: 7px;
-		width: 5.79%;
-		margin-left: 54.07%;
+		width: 39.37%;
 	}
 
 	#u620:hover
 	{
 		margin-top: 7px;
-		width: 5.79%;
-		margin-left: 54.07%;
+		width: 39.37%;
 	}
 
 	#u620:active
 	{
 		margin-top: 7px;
-		width: 5.79%;
-		margin-left: 54.07%;
-	}
-
-	#u104
-	{
-		margin-top: 266px;
-		width: 33.6%;
-		margin-left: 33.29%;
+		width: 39.37%;
 	}
 
 	.html
@@ -506,6 +552,7 @@ body
 		background: -webkit-linear-gradient(top,#7C44FF ,#6039D9 100%);
 		background: linear-gradient(to bottom,#7C44FF ,#6039D9 100%);
 	}
+
 }
 
 @media (max-width: 320px)
@@ -522,80 +569,94 @@ body
 
 	#page
 	{
-		min-height: 376px;
-		padding-top: 62px;
-		padding-bottom: 62px;
+		min-height: 300px;
+		padding-bottom: 200px;
 		max-width: 320px;
 	}
 
 	#pu124
 	{
-		width: 69.38%;
-		margin-left: 15.32%;
-	}
-
-	#u124
-	{
-		width: 39.19%;
-	}
-
-	#u171
-	{
-		width: 39.19%;
-		left: 60.82%;
-	}
-
-	#pu151
-	{
-		margin-top: 29px;
-		width: 69.38%;
+		margin-top: 62px;
+		width: 27.19%;
 		margin-left: 15.32%;
 	}
 
 	#u151
 	{
-		margin-top: 5px;
-		width: 15.77%;
+		margin-top: 34px;
+		width: 40.23%;
+	}
+
+	#u104
+	{
+		margin-left: 99.83582089552246px;
+		max-width: 200px;
+	}
+
+	#u104-wrapper
+	{
+		margin-left: -100px;
+		width: 62.5%;
+		max-width: 200px;
 	}
 
 	#u161
 	{
-		width: 17.12%;
-		left: 22.08%;
+		margin-top: 178px;
+		width: 11.88%;
+		left: 30.63%;
 	}
 
 	#u161:hover
 	{
-		width: 17.12%;
+		margin-top: 178px;
+		width: 11.88%;
+	}
+
+	#u161:active
+	{
+		margin-top: 178px;
+		width: 11.88%;
+	}
+
+	#pu171
+	{
+		padding-bottom: 0px;
+		margin-top: 62px;
+		width: 27.19%;
+		margin-left: 57.5%;
+	}
+
+	#pu185
+	{
+		margin-top: 29px;
 	}
 
 	#u185
 	{
 		margin-top: 5px;
-		width: 15.77%;
-		left: 60.82%;
+		width: 40.23%;
 	}
 
 	#u178
 	{
-		width: 17.12%;
-		left: 82.89%;
+		width: 43.68%;
+		left: 56.33%;
 	}
 
-	#u161:active,#u178:hover
+	#u178:hover
 	{
-		width: 17.12%;
+		width: 43.68%;
 	}
 
 	#u178:active
 	{
-		width: 17.12%;
+		width: 43.68%;
 	}
 
 	#pu360
 	{
-		width: 25.94%;
-		margin-left: 57.5%;
+		width: 95.41%;
 	}
 
 	#u360
@@ -632,29 +693,19 @@ body
 	#u620
 	{
 		margin-top: 7px;
-		width: 10.63%;
-		margin-left: 57.5%;
+		width: 39.09%;
 	}
 
 	#u620:hover
 	{
 		margin-top: 7px;
-		width: 10.63%;
-		margin-left: 57.5%;
+		width: 39.09%;
 	}
 
 	#u620:active
 	{
 		margin-top: 7px;
-		width: 10.63%;
-		margin-left: 57.5%;
-	}
-
-	#u104
-	{
-		margin-top: 193px;
-		width: 62.5%;
-		margin-left: 18.75%;
+		width: 39.09%;
 	}
 
 	.html
@@ -668,5 +719,6 @@ body
 	{
 		min-width: 320px;
 	}
+
 }
 
